--- a/main.html
+++ b/main.html
@@ -8,16 +8,35 @@
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
-
-<div class="cardWrapper">
-  \\card1
+ 
+<!---<div class="cardWrapper">
+  Card1
   <div class ="row">
   <div class="card" style="width: 18rem;">
     <div class="card-body">
-      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ7HESLdNA5MHHkkkDE_V_3AqAWegZajF6yVQ&usqp=CAU" class="card-img-top" alt="...">
+
+      Yeti Mug  
+      <section>    
       <h2 class="card-title">Yeti Mug</h2>
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ7HESLdNA5MHHkkkDE_V_3AqAWegZajF6yVQ&usqp=CAU" class="card-img-top" alt="...">
       <p class="card-text">Warm yourself up with a cup of hot coco with a Yeti mug.</p>
-      <a href="#" class="btn btn-primary">Order now</a>
+      <p>Available</p>
+    </section>
+
+    <section>
+      <h2>Specifications</h2>
+      <p>Size:</p>
+      <p>Weight:</p>
+      <footer></footer>
+    </section>
+    <h2>Pricing</h2>
+    <p>Small:</p>
+    <p>Medium:</p>
+    <p>Large:</p>
+    <a href="#" class="btn btn-primary">Order now</a>
+    <section>
+
+    </section>
     </div>
   </div>
 
@@ -79,18 +98,180 @@
     </div>
   </div>
 </div>
-</div>
+</div>-->
 
-
-
-
-  
-  
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"></script>
-
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"></script>
+<!--Cards 1 - 3-->
+<!--Card 1-->
+<div class="row row-cols-1 row-cols-md-3 g-4">
+  <div class="col">
+    <div class="card h-100">
+      <div class="card-body">
+        <h2 class="card-body">Insulated Mug</h2>
+        <img src="https://yeti-web.imgix.net/56cf8154cae6bcf/W-Drinkware_Tumbler_20oz_Black_Studio_Back.png?bg=0fff&auto=format&w=846&h=846" " class="card-img-top" alt="...">
+        <br>
+        <p class="card-text">Warm yourself up with a cup of hot cocoa with a Yeti mug.</p>
+        <h2>Specifications</h2>
+        <p>Size: 20oz</p>
+        <p>Weight: 0.9oz</p>
+        <p>Available</p>
+      </div>
+      <div class="card-footer">
+        <small class="text-body-secondary">This offer expires November 21, 2023.</small>
+      </div>
+      <div class="card-body">
+      <h2>Pricing</h2>
+    <p>0-3: $35.00 ea</p>
+    <p>4-6: $34.50 ea</p>
+    <p>10 & up: $33.50 ea</p>
+    <a href="#" class="btn btn-primary">Order now</a>
+      </div>
+    </div>
   
   </div>
+
+
+<!--Card 2-->
+  <div class="col">
+    <div class="card h-100">
+      <div class="card-body">
+        <h2 class="card-body">Fleece Jacket</h2>
+        <img src="https://img.freepik.com/premium-photo/double-sided-jacket-isolated_624181-3437.jpg?size=626&ext=jpg&ga=GA1.1.1264122973.1697162216&semt=ais" class="card-img-top" alt="...">
+        <br>
+        <p class="card-text">Ride into fall in style with this comfy fleece jacket.</p>
+        <h2>Specifications</h2>
+        <p>Size: S, M, L, XL, XXL, XXXL</p>
+        <p>Weight: 0.5 oz</p>
+        <p>Available</p>
+      </div>
+      <div class="card-footer">
+        <small class="text-body-secondary">This offer expires November 21, 2023.</small>
+      </div>
+      <div class="card-body">
+      <h2>Pricing</h2>
+    <p>0-3: $15 ea</p>
+    <p>4-6: $14.75 ea</p>
+    <p>10 & up: $13 ea</p>
+    <a href="#" class="btn btn-primary">Order now</a>
+      </div>
+    </div>
+  
+  </div>
+
+  <!--Card 3-->
+  <div class="col">
+    <div class="card h-100">
+      <div class="card-body">
+        <h2 class="card-body">Pumpkin Spice Candle</h2>
+        <img src="https://img.freepik.com/free-photo/cozy-home-composition-with-candles-blurred-bokeh-background_169016-13288.jpg?size=626&ext=jpg&ga=GA1.1.1264122973.1697162216&semt=sph" class="card-img-top" alt="...">
+        <br>
+        <p class="card-text">Nothing says fall like Pumpkin Spice. Spice up your home with this fragrant candle.</p>
+        <h2>Specifications</h2>
+        <p>Size: Short</p>
+        <p>Weight: 12, 16 oz</p>
+        <p>Available</p>
+      </div>
+      <div class="card-footer">
+        <small class="text-body-secondary">This offer expires November 30, 2023.</small>
+      </div>
+      <div class="card-body">
+      <h2>Pricing</h2>
+    <p>0-3: $7.99 ea</p>
+    <p>4-6: $6.75 ea</p>
+    <p>10 & up: $5.99 ea</p>
+    <a href="#" class="btn btn-primary">Order now</a>
+      </div>
+    </div>
+  
+  </div>
+
+
+  <!--Card 4-->
+  <div class="col">
+    <div class="card h-100">
+      <div class="card-body">
+        <h2 class="card-body">Wool Socks</h2>
+        <img src="https://img.freepik.com/free-photo/close-up-woman-with-tea-cup_23-2149271389.jpg?size=626&ext=jpg&ga=GA1.1.1264122973.1697162216&semt=ais" class="card-img-top" alt="...">
+        <br>
+        <p class="card-text">Keep your feet nice and toasty with these wool fleece socks.</p>
+        <h2>Specifications</h2>
+        <p>Size: 5pk</p>
+        <p>Weight: 8 oz</p>
+        <p>Available</p>
+      </div>
+      <div class="card-footer">
+        <small class="text-body-secondary">This offer expires December 31, 2023.</small>
+      </div>
+      <div class="card-body">
+      <h2>Pricing</h2>
+    <p>0-3: $12.99 ea</p>
+    <p>4-6: $12.55 ea</p>
+    <p>10 & up: $11.75 ea</p>
+    <a href="#" class="btn btn-primary">Order now</a>
+      </div>
+    </div>
+  
+  </div>
+
+
+  <!--Card 5-->
+  <div class="col">
+    <div class="card h-100">
+      <div class="card-body">
+        <h2 class="card-body">Peppermint Mocha Latte Set</h2>
+        <img src="https://img.freepik.com/premium-photo/peppermint-coffee-mocha-christmas-wooden-table-copy-space_123827-2045.jpg?size=626&ext=jpg&ga=GA1.2.1264122973.1697162216&semt=ais" class="card-img-top" alt="...">
+        <br>
+        <p class="card-text">The perfect pre-gift for those who are already ready for Christmas.</p>
+        <h2>Specifications</h2>
+        <p>Size: 5pk</p>
+        <p>Weight: 8 oz</p>
+        <p>Available</p>
+      </div>
+      <div class="card-footer">
+        <small class="text-body-secondary">This offer expires December 31, 2023.</small>
+      </div>
+      <div class="card-body">
+      <h2>Pricing</h2>
+    <p>0-3: $5.99 ea</p>
+    <p>4-6: $4.75 ea</p>
+    <p>10 & up: $4.25 ea</p>
+    <a href="#" class="btn btn-primary">Order now</a>
+      </div>
+    </div>
+  
+  </div>
+
+
+  <!--Card 6-->
+  <div class="col">
+    <div class="card h-100">
+      <div class="card-body">
+        <h2 class="cardTitle">NoteBook</h2>
+        <img src="https://img.freepik.com/free-photo/top-view-notebook-autumn-leaves_23-2148630214.jpg?size=626&ext=jpg&ga=GA1.2.1264122973.1697162216&semt=ais" class="card-img-top" alt="...">
+
+        <br>
+        <p class="card-text">Start this fall on a new leaf with journalling in our Fall-Themed notebook.</p>
+        <h2>Specifications</h2>
+        <p>Size: 1pk</p>
+        <p>Weight: 2 oz</p>
+        <p>Available</p>
+      </div>
+      <div class="card-footer">
+        <small class="text-body-secondary">This offer expires December 31, 2023.</small>
+      </div>
+      <div class="card-body">
+      <h2>Pricing</h2>
+    <p>0-3: $3.99 ea</p>
+    <p>4-6: $3.25 ea</p>
+    <p>10 & up: $2.99 ea</p>
+    <a href="#" class="btn btn-primary">Order now</a>
+      </div>
+    </div>
+  
+  </div>
+
+
+  
+  
 </body>
 </html>
