--- a/main.html
+++ b/main.html
@@ -110,7 +110,7 @@
         <h2 class="card-body">Insulated Mug</h2>
         <img src="https://yeti-web.imgix.net/56cf8154cae6bcf/W-Drinkware_Tumbler_20oz_Black_Studio_Back.png?bg=0fff&auto=format&w=846&h=846" " class="card-img-top" alt="...">
         <br>
-        <p class="card-text">Warm yourself up with a cup of hot cocoa with a Yeti mug.</p>
+        <p class="card-text">Warm yourself up with a cup of hot cocoa with a Yeti mug.  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
         <h2>Specifications</h2>
         <p>Size: 20oz</p>
         <p>Weight: 0.9oz</p>
@@ -138,7 +138,7 @@
         <h2 class="card-body">Fleece Jacket</h2>
         <img src="https://img.freepik.com/premium-photo/double-sided-jacket-isolated_624181-3437.jpg?size=626&ext=jpg&ga=GA1.1.1264122973.1697162216&semt=ais" class="card-img-top" alt="...">
         <br>
-        <p class="card-text">Ride into fall in style with this comfy fleece jacket.</p>
+        <p class="card-text">Ride into fall in style with this comfy fleece jacket. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
         <h2>Specifications</h2>
         <p>Size: S, M, L, XL, XXL, XXXL</p>
         <p>Weight: 0.5 oz</p>
@@ -165,7 +165,7 @@
         <h2 class="card-body">Pumpkin Spice Candle</h2>
         <img src="https://img.freepik.com/free-photo/cozy-home-composition-with-candles-blurred-bokeh-background_169016-13288.jpg?size=626&ext=jpg&ga=GA1.1.1264122973.1697162216&semt=sph" class="card-img-top" alt="...">
         <br>
-        <p class="card-text">Nothing says fall like Pumpkin Spice. Spice up your home with this fragrant candle.</p>
+        <p class="card-text">Nothing says fall like Pumpkin Spice. Spice up your home with this fragrant candle.  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
         <h2>Specifications</h2>
         <p>Size: Short</p>
         <p>Weight: 12, 16 oz</p>
@@ -193,7 +193,7 @@
         <h2 class="card-body">Wool Socks</h2>
         <img src="https://img.freepik.com/free-photo/close-up-woman-with-tea-cup_23-2149271389.jpg?size=626&ext=jpg&ga=GA1.1.1264122973.1697162216&semt=ais" class="card-img-top" alt="...">
         <br>
-        <p class="card-text">Keep your feet nice and toasty with these wool fleece socks.</p>
+        <p class="card-text">Keep your feet nice and toasty with these wool fleece socks.  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
         <h2>Specifications</h2>
         <p>Size: 5pk</p>
         <p>Weight: 8 oz</p>
@@ -221,7 +221,7 @@
         <h2 class="card-body">Peppermint Mocha Latte Set</h2>
         <img src="https://img.freepik.com/premium-photo/peppermint-coffee-mocha-christmas-wooden-table-copy-space_123827-2045.jpg?size=626&ext=jpg&ga=GA1.2.1264122973.1697162216&semt=ais" class="card-img-top" alt="...">
         <br>
-        <p class="card-text">The perfect pre-gift for those who are already ready for Christmas.</p>
+        <p class="card-text">The perfect pre-gift for those who are already ready for Christmas.  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
         <h2>Specifications</h2>
         <p>Size: 5pk</p>
         <p>Weight: 8 oz</p>
@@ -248,9 +248,9 @@
       <div class="card-body">
         <h2 class="cardTitle">NoteBook</h2>
         <img src="https://img.freepik.com/free-photo/top-view-notebook-autumn-leaves_23-2148630214.jpg?size=626&ext=jpg&ga=GA1.2.1264122973.1697162216&semt=ais" class="card-img-top" alt="...">
-
+        <section class="justify">
         <br>
-        <p class="card-text">Start this fall on a new leaf with journalling in our Fall-Themed notebook.</p>
+        <p class="card-text">Start this fall on a new leaf with journalling in our Fall-Themed notebook. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
         <h2>Specifications</h2>
         <p>Size: 1pk</p>
         <p>Weight: 2 oz</p>
@@ -269,6 +269,7 @@
     </div>
   
   </div>
+</section>
 
 
   
